Writing the readme file

--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,7 @@
   
     <div class="calender" id="calendar">
 
+      <!-- Chris, K. (2021, August 16). HTML Button onclick- JavaScript Click Event Tutorial. https://www.freecodecamp.org/news/html-button-onclick-javascript-click-event-tutorial/  -->
       <!-- This code represents that when each box is clicked on, it will open up the id, 'card' as a pop up-->
 <button onclick="openMeal('card')">
 <div id="one" class="box"> <p>Day 1</p> </div>
